source/css/scss/objects/_icons.scss
/*------------------------------------*\
    ICON
\*------------------------------------*/
.a-icon {
  display: table-cell;
  width: 60px;
  min-width: 60px;
  height: 60px;
  font-size: 48px;
  text-align: center;
  vertical-align: middle;

  &.a-icon-circle {
    font-size: 36px;
  }
}

// Small icon
.a-icon-small {
  width: $spacer * 4;
  height: $spacer * 4;
  font-size: 36px;

  &.a-icon-circle {
    font-size: 24px;
  }
}

// Icon inside circle
.a-icon-circle {
  background-color: $grey-light;
  border-radius: 50%;

  &.a-bgBlue {
    color: $white;
  }
}

/*------------------------------------*\
    ICON WITH TEXT NEXT TO IT
\*------------------------------------*/
// The container
.a-iconText {
  display: flex;
  width: 100%;
  min-height: $spacer * 7;
  align-items: center;

  // The icon
  .a-iconText-icon {
    width: $spacer * 5;
    min-width: $spacer * 5;
    margin-right: $spacer;

    .a-date {
      margin: 0;
    }
  }

  // The text
  .a-iconText-text {
    .a-iconText-text-small {
      display: block;
      margin-bottom: 0;
      font-size: 16px;
    }

    p {
      &.a-iconText-text-large {
        margin-bottom: 0;
        font-family: $font-medium;
        font-size: 18px;
        font-weight: $font-weight-medium;
        line-height: 24px;

        @include media-breakpoint-up( lg ) {
          font-size: 24px;
          line-height: 30px;
        }
      }
    }

    // If there is a small text above, large text should be smaller
    .a-iconText-text-small + .a-iconText-text-large {
      @include media-breakpoint-up( lg ) {
        font-size: 22px;
        line-height: 28px;
      }
    }

    .a-link {
      font-family: $font-bold;
      font-size: 20px;
      font-weight: $font-weight-bold;
      line-height: 36px;
    }
  }

  // VARIATION: Shadow
  &.a-iconText-shadow {
    padding: $spacer;
    box-shadow: $shadow;
  }

  // VARIATION: Dotted border

  &.a-iconText-border {
    padding: 10px; // 12px -2px for border...
    border: 2px dotted $blue;
  }

  // VARIATION: Backgrounds
  &.a-iconText-background {
    padding: $spacer;
    color: $white;
    background: $grey;

    .a-icon-circle {
      color: $black;
    }

    &.a-iconText-background--blueDarker {
      color: $white;

      background: $blue-darker;
    }

    &.a-iconText-background--white {
      color: $black;
      background: $white;
    }
  }
}

// VARIATION: Change background colors based on body background
.a-bgWhite {
  .a-iconText {
    &.a-iconText-background {
      &.a-iconText-background--white {
        color: $black;
        background: $grey-light;
      }
    }
  }
}

// VARIATION: Large
.a-iconText-large {
  @include media-breakpoint-up( lg ) {
    min-height: $spacer * 8;

    .a-iconText-icon {
      width: $spacer * 6;
    }

    .a-icon {
      width: $spacer * 6;
      min-width: $spacer * 6;
      height: $spacer * 6;
      font-size: 60px;

      &.a-icon-circle {
        font-size: 36px;
      }
    }
  }
}

// Profilmanual css? (TODO: move to ap-css)

.a-icon-right {
  display: inline;
  // float: right;
}

